--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-contact-list></app-contact-list>
+<mat-sidenav-container class="app-sidenav-container">
+  <mat-sidenav #sidenav [mode]="mode.value" [opened]="false" class="app-sidenav">
+    <p>Sidenav content</p>
+  </mat-sidenav>
+  <mat-sidenav-content class="app-sidenav-content">
+    <app-toolbar (menuClick)="sidenav.toggle()"></app-toolbar>
+    <app-contact-list></app-contact-list>
+  </mat-sidenav-content>
+</mat-sidenav-container>
