--- a/src/app/contact/contact-list-item/contact-list-item.component.html
+++ b/src/app/contact/contact-list-item/contact-list-item.component.html
@@ -1,3 +1,26 @@
-<li (click)="onContactSelect()">
-{{contact.firstName}} {{contact.lastName}}
-</li>
+<div (click)="onContactSelect()">
+  <mat-card class="card-style">
+    <mat-card-actions fxLayoutAlign="end">
+      <button mat-flat-button class="menu-button">
+        <img src="../../../assets/img/baseline_add_circle_outline_black_24dp.png">
+      </button>
+    </mat-card-actions>
+    <mat-card-title><ngx-avatar name="{{contact.firstName}} {{contact.lastName}}" fxLayoutAlign="center center"></ngx-avatar></mat-card-title>
+    <mat-card-content>
+      <h4 fxLayoutAlign="center center">
+        {{contact.firstName}} {{contact.lastName}}
+      </h4>
+    </mat-card-content>
+    <mat-card-content fxLayoutAlign="center center"><img src="../../../assets/img/outline_place_black_24dp.png">
+      {{contact.address}} </mat-card-content>
+    <mat-card-content fxLayoutAlign="center center"><img src="../../../assets/img/outline_email_black_24dp.png">
+      {{contact.email}} </mat-card-content>
+    <mat-card-content fxLayoutAlign="center center"><img src="../../../assets/img/outline_phone_black_24dp.png">
+      {{contact.phoneNumber}} </mat-card-content>
+    <mat-card-actions fxLayoutAlign="end">
+      <button mat-flat-button class="menu-button">
+      <img src="../../../assets/img/outline_delete_black_24dp.png" (click)="onDelete()">
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</div>
