--- a/src/app/ui/toolbar/toolbar/toolbar.component.html
+++ b/src/app/ui/toolbar/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="warn">
-  <button mat-icon-button (click)="onMenuClick()" value="push">
+<mat-toolbar class="background mat-elevation-z1">
+  <button mat-flat-button (click)="onMenuClick()" value="push" color="primary" class="menu-button">
   <a class="nav">
       <div class="one"></div>
       <div class="two"></div>
