--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,6 @@
   </mat-sidenav>
   <mat-sidenav-content class="app-sidenav-content">
     <app-toolbar (menuClick)="sidenav.toggle()"></app-toolbar>
-    <app-contact-list></app-contact-list>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
