--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     </a>
     </div>
   </mat-sidenav>
-  <mat-sidenav-content class="app-sidenav-content">
+  <mat-sidenav-content>
     <app-toolbar (menuClick)="sidenav.toggle()"></app-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
