--- a/src/app/ui/toolbar/toolbar/toolbar.component.css
+++ b/src/app/ui/toolbar/toolbar/toolbar.component.css
@@ -1,38 +1,7 @@
-.nav div{
-  height: 3px;
-  background: #000000;
-  margin: 4px 0;
-  border-radius: 24px;
-  transition: .3s;
+.menu-button {
+  color: #000000;
 }
-
-.nav {
-  display: block;
-  width: 25px;
-}
-
-.one {
-  width: 25px;
-}
-
-.two {
-  width: 20px;
-}
-
-.three {
-  width: 15px;
-}
-
-.nav:hover div {
-  width: 25px;
-}
-
 .background {
   background-color: #FFFFFF;
 }
 
-.menu-button {
-  background-color: #FFFFFF;
-  border: none;
-  box-shadow: none;
-}
