--- a/src/app/contact/contact-list-item/contact-list-item.component.html
+++ b/src/app/contact/contact-list-item/contact-list-item.component.html
@@ -1,4 +1,4 @@
-<div (click)="onContactSelect()">
+<div>
   <mat-card class="card-style">
     <mat-card-actions fxLayoutAlign="end">
         <img src="../../../assets/img/outline_create_black_24dp.png" (click)="onEdit()" class="pointer">
@@ -16,7 +16,7 @@
     <mat-card-content fxLayoutAlign="center center"><img src="../../../assets/img/outline_phone_black_24dp.png">
       {{contact.phoneNumber}} </mat-card-content>
     <mat-card-actions fxLayoutAlign="end">
-      <img src="../../../assets/img/outline_delete_black_24dp.png" (click)="onDelete(contact)" class="pointer">
+      <img src="../../../assets/img/outline_delete_black_24dp.png" (click)="removeContact(contact)" class="pointer">
     </mat-card-actions>
   </mat-card>
 </div>
