--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
     <div>
       <div fxLayout="column" fxLayoutAlign="center center" class="sidenav-user-area">
         <div>
-          <mat-icon class="sidenav-avatar background" fxLayoutAlign="center center">account_circle</mat-icon>
+          <img src="../assets/img/IMG_20180602_183914_088.jpg" class="image-style">
         </div>
-        <h3 fxLayoutAlign="center center">Tuomas Käyhty</h3>
+        <h3 fxLayoutAlign="center center" style="color: #FFFFFF">Tuomas Käyhty</h3>
       </div>
     </div>
     <div class="link-style">
