--- a/src/app/contact/contact-detail/contact-detail.component.html
+++ b/src/app/contact/contact-detail/contact-detail.component.html
@@ -24,6 +24,7 @@
     <mat-error *ngIf="LastName.invalid"><mat-icon matPrefix>close</mat-icon>Invalid lastname</mat-error>
   </mat-form-field>
     </div>
+    <div fxLayout="row">
     <mat-form-field appearance="outline">
       <mat-label>Address</mat-label>
       <input matInput [(ngModel)]="contact.address"
@@ -33,6 +34,23 @@
              required>
       <mat-icon matPrefix><img src="../../../assets/img/outline_place_black_24dp.png"></mat-icon>
       <mat-error *ngIf="Address.invalid"><mat-icon matPrefix>close</mat-icon>Invalid address</mat-error>
+      <input matInput [(ngModel)]="contact.postalCode"
+             name="PostalCode" #Address="ngModel"
+             type="text"
+             required>
+      <mat-icon matPrefix></mat-icon>
+      <mat-error *ngIf="Address.invalid"><mat-icon matPrefix>close</mat-icon>Invalid postalcode</mat-error>
+    </mat-form-field>
+      </div>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Postalcode</mat-label>
+      <input matInput [(ngModel)]="contact.city"
+             name="PostalCode" #LastName="ngModel"
+             type="text"
+             required>
+      <mat-icon matPrefix><img src="../../../assets/img/outline_home_black_24dp.png"></mat-icon>
+      <mat-error *ngIf="LastName.invalid"><mat-icon matPrefix>close</mat-icon>Invalid city</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
