--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,3 +1,11 @@
+<div class="search-position">
+  <form>
+  <mat-form-field class="search-full-width" appearance="outline">
+    <mat-icon matPrefix class="icon-position">search</mat-icon>
+    <input matInput placeholder="Search">
+  </mat-form-field>
+  </form>
+</div>
 <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px" fxLayout.md="column" fxLayout.lt-sm="column"
      fxLayout.lt-md="column" fxLayout.xs="column" class="card-padding">
   <app-contact-list-item *ngFor="let contact of contacts | paginate: { itemsPerPage: 4, currentPage: p}"
