--- a/src/app/ui/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/ui/confirm-dialog/confirm-dialog.component.html
@@ -3,6 +3,6 @@
   <p>Are you sure?</p>
 </div>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-delete>Delete</button>
+  <button mat-button [mat-dialog-close]="true">Delete</button>
   <button mat-button mat-dialog-close>Cancel</button>
 </mat-dialog-actions>
