--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div>
       <div fxLayout="column" fxLayoutAlign="center center" class="sidenav-user-area">
         <div>
-          <img src="../../src/assets/img/IMG_20180602_183914_088.jpg" class="image-style">
+          <img src="../../src/assets/img/icon.jpg" class="image-style">
         </div>
         <h3 fxLayoutAlign="center center" style="color: #FFFFFF">Tuomas Käyhty</h3>
       </div>
@@ -11,7 +11,7 @@
     <div class="link-style">
     <span>In GitHub</span>
     <a href="https://github.com/TuomasVille/KLI1317-contacts-app">
-      <img src="../../src/assets/img/GitHub-Mark-32px.png">
+      <img src="../../src/assets/img/github-mark.png">
     </a>
     </div>
   </mat-sidenav>
