--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,6 +1,6 @@
 <div class="search-position">
   <form>
-  <mat-form-field class="search-full-width" appearance="outline">
+  <mat-form-field class="search-full-width">
     <mat-icon matPrefix class="icon-position">search</mat-icon>
     <input matInput placeholder="Search">
   </mat-form-field>
