--- a/src/app/contact/contact-detail/contact-detail.component.css
+++ b/src/app/contact/contact-detail/contact-detail.component.css
@@ -8,3 +8,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.mat-form-field-label{
+  color: #000000 !important;
+}
+.mat-form-field-underline {
+  background-color: #000000 !important;;
+}
+.mat-form-field-ripple {
+  background-color: #000000 !important;
+}
