--- a/src/app/contact/contact-detail/contact-detail.component.html
+++ b/src/app/contact/contact-detail/contact-detail.component.html
@@ -4,7 +4,7 @@
     <div fxLayoutAlign="center center">
   <div fxLayoutAlign="center start" fxLayout="column">
     <div fxLayout="row">
-    <mat-form-field appearance="outline">
+    <mat-form-field>
       <mat-label>Firstname</mat-label>
       <input matInput [(ngModel)]="contact.firstName"
              name="FirstName" #FirstName="ngModel"
@@ -14,18 +14,17 @@
       <mat-error *ngIf="FirstName.invalid"><mat-icon matPrefix>close</mat-icon>Invalid name</mat-error>
     </mat-form-field>
 
-  <mat-form-field appearance="outline">
+  <mat-form-field style="margin-left: 20px">
     <mat-label>Lastname</mat-label>
     <input matInput [(ngModel)]="contact.lastName"
            name="LastName" #LastName="ngModel"
            type="text"
            required>
-    <mat-icon matPrefix></mat-icon>
     <mat-error *ngIf="LastName.invalid"><mat-icon matPrefix>close</mat-icon>Invalid lastname</mat-error>
   </mat-form-field>
     </div>
     <div fxLayout="row">
-    <mat-form-field appearance="outline">
+    <mat-form-field>
       <mat-label>Address</mat-label>
       <input matInput [(ngModel)]="contact.address"
              name="Address" #Address="ngModel"
@@ -34,17 +33,19 @@
              required>
       <mat-icon matPrefix><img src="../../../assets/img/outline_place_black_24dp.png"></mat-icon>
       <mat-error *ngIf="Address.invalid"><mat-icon matPrefix>close</mat-icon>Invalid address</mat-error>
+    </mat-form-field>
+      <mat-form-field style="margin-left: 20px">
+        <mat-label>Postalcode</mat-label>
       <input matInput [(ngModel)]="contact.postalCode"
              name="PostalCode" #Address="ngModel"
              type="text"
              required>
-      <mat-icon matPrefix></mat-icon>
       <mat-error *ngIf="Address.invalid"><mat-icon matPrefix>close</mat-icon>Invalid postalcode</mat-error>
-    </mat-form-field>
+      </mat-form-field>
       </div>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Postalcode</mat-label>
+    <mat-form-field>
+      <mat-label>City</mat-label>
       <input matInput [(ngModel)]="contact.city"
              name="PostalCode" #LastName="ngModel"
              type="text"
@@ -53,7 +54,7 @@
       <mat-error *ngIf="LastName.invalid"><mat-icon matPrefix>close</mat-icon>Invalid city</mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="outline">
+    <mat-form-field>
       <mat-label>Email</mat-label>
       <input matInput [(ngModel)]="contact.email"
              name="Email" #Email="ngModel"
@@ -64,7 +65,7 @@
       <mat-error *ngIf="Email.invalid"><mat-icon matPrefix>close</mat-icon>Invalid email</mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="outline">
+    <mat-form-field>
       <mat-label>Number</mat-label>
       <input matInput [(ngModel)]="contact.phoneNumber"
              name="PhoneNumber" #PhoneNumber="ngModel"
