--- a/src/app/contact/contact-list/contact-list.component.css
+++ b/src/app/contact/contact-list/contact-list.component.css
@@ -23,6 +23,8 @@ pagination-controls /deep/ .ngx-pagination a, .ngx-pagination{
 }
 
 .search-full-width {
+  margin: 0;
+  padding: 0;
   width: 20%;
 }
 
@@ -35,6 +37,12 @@ pagination-controls /deep/ .ngx-pagination a, .ngx-pagination{
   margin-top: 20px;
 }
 
-::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-  color: #cdcdcd !important;
+.mat-form-field-label{
+  color: #000000 !important;
+}
+.mat-form-field-underline {
+  background-color: #000000 !important;;
+}
+.mat-form-field-ripple {
+  background-color: #000000 !important;
 }
