--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,13 @@
         <div>
           <img src="assets/img/icon.jpg" class="image-style">
         </div>
-        <h3 fxLayoutAlign="center center" style="color: #FFFFFF">Tuomas Käyhty</h3>
+        <h3 fxLayoutAlign="center center" style="color:#FFFFFF;">Tuomas Käyhty</h3>
       </div>
     </div>
     <div class="link-style">
     <span>In GitHub</span>
     <a href="https://github.com/TuomasVille/KLI1317-contacts-app">
-      <img src="assets/img/github-mark.png">
+      <img src="assets/img/GitHub-Mark-32px.png">
     </a>
     </div>
   </mat-sidenav>
