--- a/src/app/contact/contact-detail/contact-detail.component.html
+++ b/src/app/contact/contact-detail/contact-detail.component.html
@@ -1,29 +1,28 @@
-<div class="div-style" fxFlexFill>
-<mat-card>
+<mat-card class="div-style">
   <form (submit)="onSave()" #contactForm="ngForm">
-    <div fxLayoutAlign="center center">
+    <div fxLayoutAlign="center center" style="margin-top: 30px">
   <div fxLayoutAlign="center start" fxLayout="column">
-    <div fxLayout="row">
+    <div fxLayout="row" class="direction">
     <mat-form-field>
       <mat-label>Firstname</mat-label>
       <input matInput [(ngModel)]="contact.firstName"
              name="FirstName" #FirstName="ngModel"
              type="text"
              required>
-      <mat-icon matPrefix>person_outline</mat-icon>
-      <mat-error *ngIf="FirstName.invalid"><mat-icon matPrefix>close</mat-icon>Invalid name</mat-error>
+      <mat-icon matPrefix class="icon-position-create">person_outline</mat-icon>
+      <mat-error *ngIf="FirstName.invalid"><mat-icon matPrefix class="icon-position-error">close</mat-icon>Invalid name</mat-error>
     </mat-form-field>
 
-  <mat-form-field style="margin-left: 20px">
-    <mat-label>Lastname</mat-label>
+  <mat-form-field class="form-field-margin">
+    <mat-label class="row-margin">Lastname</mat-label>
     <input matInput [(ngModel)]="contact.lastName"
            name="LastName" #LastName="ngModel"
            type="text"
            required>
-    <mat-error *ngIf="LastName.invalid"><mat-icon matPrefix>close</mat-icon>Invalid lastname</mat-error>
+    <mat-error *ngIf="LastName.invalid"><mat-icon matPrefix class="icon-position-error">close</mat-icon>Invalid lastname</mat-error>
   </mat-form-field>
     </div>
-    <div fxLayout="row">
+
     <mat-form-field>
       <mat-label>Address</mat-label>
       <input matInput [(ngModel)]="contact.address"
@@ -31,28 +30,30 @@
              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{4,}"
              type="text"
              required>
-      <mat-icon matPrefix><img src="../../../assets/img/outline_place_black_24dp.png"></mat-icon>
-      <mat-error *ngIf="Address.invalid"><mat-icon matPrefix>close</mat-icon>Invalid address</mat-error>
+      <mat-icon matPrefix class="icon-position-create"><img src="assets/img/outline_place_black_24dp.png"></mat-icon>
+      <mat-error *ngIf="Address.invalid"><mat-icon matPrefix class="icon-position-error">close</mat-icon>Invalid address</mat-error>
     </mat-form-field>
-      <mat-form-field style="margin-left: 20px">
-        <mat-label>Postalcode</mat-label>
-      <input matInput [(ngModel)]="contact.postalCode"
-             name="PostalCode" #Address="ngModel"
-             type="text"
-             required>
-      <mat-error *ngIf="Address.invalid"><mat-icon matPrefix>close</mat-icon>Invalid postalcode</mat-error>
-      </mat-form-field>
-      </div>
 
-    <mat-form-field>
-      <mat-label>City</mat-label>
+    <div fxLayout="row" class="direction">
+      <mat-form-field>
+        <mat-label>Postalcode</mat-label>
+        <input matInput [(ngModel)]="contact.postalCode"
+               name="PostalCode" #Address="ngModel"
+               type="text"
+               required>
+        <mat-icon matPrefix class="icon-position-create"><img src="assets/img/outline_home_black_24dp.png"></mat-icon>
+        <mat-error *ngIf="Address.invalid"><mat-icon matPrefix class="icon-position-error">close</mat-icon>Invalid postalcode</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="form-field-margin">
+      <mat-label class="row-margin">City</mat-label>
       <input matInput [(ngModel)]="contact.city"
-             name="PostalCode" #LastName="ngModel"
+             name="City" #City="ngModel"
              type="text"
              required>
-      <mat-icon matPrefix><img src="../../../assets/img/outline_home_black_24dp.png"></mat-icon>
-      <mat-error *ngIf="LastName.invalid"><mat-icon matPrefix>close</mat-icon>Invalid city</mat-error>
+      <mat-error *ngIf="City.invalid"><mat-icon matPrefix class="icon-position-error">close</mat-icon>Invalid city</mat-error>
     </mat-form-field>
+    </div>
 
     <mat-form-field>
       <mat-label>Email</mat-label>
@@ -61,8 +62,8 @@
              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
              type="text"
              required>
-      <mat-icon matPrefix>mail_outline</mat-icon>
-      <mat-error *ngIf="Email.invalid"><mat-icon matPrefix>close</mat-icon>Invalid email</mat-error>
+      <mat-icon matPrefix class="icon-position-create">mail_outline</mat-icon>
+      <mat-error *ngIf="Email.invalid"><mat-icon matPrefix class="icon-position-error">close</mat-icon>Invalid email</mat-error>
     </mat-form-field>
 
     <mat-form-field>
@@ -72,14 +73,14 @@
              type="tel"
              required
              maxlength="12">
-      <mat-icon matPrefix>smartphone</mat-icon>
-      <mat-error *ngIf="PhoneNumber.invalid"><mat-icon matPrefix>close</mat-icon>Invalid number</mat-error>
+      <mat-icon matPrefix class="icon-position-create">smartphone</mat-icon>
+      <mat-error *ngIf="PhoneNumber.invalid"><mat-icon matPrefix class="icon-position-error">close</mat-icon>Invalid number</mat-error>
     </mat-form-field>
 </div>
     </div>
   </form>
 </mat-card>
-</div>
+
 <button mat-fab class="app-fab" (click)="onSave()" [disabled]="!contactForm.form.valid">
-  <mat-icon>check</mat-icon>
+  <mat-icon style="color: #FFFFFF">check</mat-icon>
 </button>
