--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -2,10 +2,9 @@
   <form>
   <mat-form-field class="search-full-width">
     <mat-icon matPrefix class="icon-position">search</mat-icon>
-    <input matInput placeholder="Search">
+    <input matInput placeholder="Search" #box (input)="searchFilter(box.value)">
   </mat-form-field>
   </form>
-</div>
 <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px" fxLayout.md="column" fxLayout.lt-sm="column"
      fxLayout.lt-md="column" fxLayout.xs="column" class="card-padding">
   <app-contact-list-item *ngFor="let contact of contacts | paginate: { itemsPerPage: 4, currentPage: p}"
@@ -18,7 +17,7 @@
 </div>
 <div>
   <button mat-fab class="app-fab" (click)="onContactCreate()">
-    <mat-icon>add</mat-icon>
+    <mat-icon style="color: #FFFFFF">add</mat-icon>
   </button>
 </div>
-
+</div>
