--- a/src/app/ui/toolbar/toolbar/toolbar.component.html
+++ b/src/app/ui/toolbar/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="background mat-elevation-z1">
+<mat-toolbar class="background">
   <button mat-icon-button (click)="mainAction.runAction()" value="push"><mat-icon class="menu-button">{{mainAction.icon}}</mat-icon></button>
-  <span>{{options.title}}</span>
+  <span class="title-center">{{options.title}}</span>
 </mat-toolbar>
