--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,12 @@ html, body {
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  letter-spacing: 1px;
+}
+
+.mat-fab.mat-accent, .mat-flat-button.mat-accent, .mat-mini-fab.mat-accent, .mat-raised-button.mat-accent {
+  background-color: #000000;
 }
 
 .app-fab {
